<resources>
    <string name="app_name">5E Companion</string>
    <string name="placeholder_char_name">Character Name</string>
    <string name="heading_ability_scores">Ability Scores</string>
    <string name="label_stat_strength">Strength</string>
    <string name="label_stat_dexterity">Dexterity</string>
    <string name="label_stat_constitution">Constitution</string>
    <string name="label_stat_intelligence">Intelligence</string>
    <string name="label_stat_wisdom">Wisdom</string>
    <string name="label_stat_charisma">Charisma</string>
    <string name="label_bonus_acrobatics">Acrobatics</string>
    <string name="label_bonus_animal_handling">Animal Handling</string>
    <string name="label_bonus_arcana">Arcana</string>
    <string name="label_bonus_athletics">Athletics</string>
    <string name="label_bonus_deception">Deception</string>
    <string name="label_bonus_history">History</string>
    <string name="label_bonus_insight">Insight</string>
    <string name="label_bonus_intimidation">Intimidation</string>
    <string name="label_bonus_investigation">Investigation</string>
    <string name="label_bonus_medicine">Medicine</string>
    <string name="label_bonus_nature">Nature</string>
    <string name="label_bonus_perception">Perception</string>
    <string name="label_bonus_performance">Performance</string>
    <string name="label_bonus_persuasion">Persuasion</string>
    <string name="label_bonus_religion">Religion</string>
    <string name="label_bonus_sleight_of_hand">Sleight of Hand</string>
    <string name="label_bonus_stealth">Stealth</string>
    <string name="label_bonus_survival">Survival</string>
    <string name="placeholder_character_class_level">Character Class/Level</string>
    <string name="heading_status">Status</string>
    <string name="label_hit_points">Hit Points</string>
    <string name="placeholder_hit_points">0/0</string>
    <string name="heading_score">Score</string>
    <string name="heading_bonus">Bonus</string>
    <string name="heading_save">Save</string>
    <string name="placeholder_zero">0</string>
    <string name="heading_skills">Skills</string>
    <string name="heading_weapons">Weapons</string>
    <string name="heading_equipment">Equipment</string>
    <string name="label_platinum">Platinum</string>
    <string name="label_gold">Gold</string>
    <string name="label_electrum">Electrum</string>
    <string name="label_silver">Silver</string>
    <string name="label_copper">Copper</string>

    <string name="label_strength_score">Strength Score</string>
    <string name="label_dexterity_score">Dexterity Score</string>
    <string name="label_constitution_score">Constitution Score</string>
    <string name="label_intelligence_score">Intelligence Score</string>
    <string name="label_wisdom_score">Wisdom Score</string>
    <string name="label_charisma_score">Charisma Score</string>

    <string name="label_stats_rolled">Rolled</string>
    <string name="label_stats_point_buy">Point Buy</string>
    <string name="label_stats_standard_array">Standard Array</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="label_speed">Speed</string>
    <string name="label_hit_dice">Hit Dice</string>
    <string-array name="stat_creation_values">
        <item>Rolled</item>
        <item>Point Buy</item>
        <item>Standard Array</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
