<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schoolerc.dungeoncompanion.ui.MoneyFragment">

    <TextView
        android:id="@+id/textViewPlatinumQuantity"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlatinumLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewElectrumQuantity"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewPlatinumLabel"
        android:text="@string/label_platinum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textViewPlatinumQuantity"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="8dp"/>


    <TextView
        android:id="@+id/textViewElectrumQuantity"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlatinumLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewPlatinumQuantity"
        app:layout_constraintRight_toLeftOf="@+id/textViewGoldQuantity"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewGoldQuantity"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlatinumLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewElectrumQuantity"
        app:layout_constraintRight_toLeftOf="@+id/textViewSilverQuantity"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewSilverQuantity"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlatinumLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewGoldQuantity"
        app:layout_constraintRight_toLeftOf="@+id/textViewCopperQuantity"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewCopperQuantity"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlatinumLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewSilverQuantity"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewElectrumLabel"
        android:text="@string/label_electrum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textViewElectrumQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewPlatinumLabel" />

    <TextView
        android:id="@+id/textViewGoldLabel"
        android:text="@string/label_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textViewGoldQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewPlatinumLabel" />

    <TextView
        android:id="@+id/textViewSilverLabel"
        android:text="@string/label_silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textViewSilverQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewPlatinumLabel" />

    <TextView
        android:id="@+id/textViewCopperLabel"
        android:text="@string/label_copper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/textViewCopperQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewPlatinumLabel" />

</android.support.constraint.ConstraintLayout>
