<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schoolerc.dungeoncompanion.ui.AbilityScoresFragment">

    <!-- Begin Stats Block -->
    <TextView
        android:text="@string/heading_ability_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHeadingStats"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalMidline"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_marginTop="8dp"
        android:textSize="24sp" />

    <View
        android:id="@+id/viewHeadingSeparatorStats"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalMidline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeadingStats" />
    <TextView
        android:text="@string/heading_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilityScoreHeading"
        app:layout_constraintTop_toBottomOf="@+id/viewHeadingSeparatorStats"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewStrengthScore"
        app:layout_constraintRight_toRightOf="@+id/textViewStrengthScore"
        app:layout_constraintHorizontal_bias="0.5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilityBonusHeading"
        android:text="@string/heading_bonus"
        app:layout_constraintTop_toBottomOf="@+id/viewHeadingSeparatorStats"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="@+id/textViewStrengthBonus"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewStrengthBonus" />
    <TextView
        android:text="@string/heading_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilitySaveHeading"
        app:layout_constraintTop_toBottomOf="@+id/viewHeadingSeparatorStats"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewStrengthSave"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="@+id/textViewStrengthSave" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthScore"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbilityScoreHeading"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:text="@string/label_stat_strength"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:id="@+id/textViewStrengthLabel"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/material_grey_400"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbilityScoreHeading"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewStrengthBonus"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewStrengthScore"
        android:layout_marginLeft="8dp" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthBonus"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbilityBonusHeading"
        app:layout_constraintRight_toLeftOf="@+id/textViewStrengthSave"
        android:layout_marginEnd="8dp" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthSave"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbilitySaveHeading" />
    <TextView
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewDexterityScore"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrengthScore"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/textViewDexteritySave"
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrengthSave"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/textViewDexterityBonus"
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrengthBonus"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewDexteritySave"
        android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/textViewDexterityLabel"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:background="@color/material_grey_500"
        android:text="@string/label_stat_dexterity"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrengthLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewDexterityBonus"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewDexterityScore"
        android:layout_marginStart="8dp" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionScore"
        app:layout_constraintTop_toBottomOf="@+id/textViewDexterityScore"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionSave"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDexteritySave"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionBonus"
        app:layout_constraintTop_toBottomOf="@+id/textViewDexterityBonus"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewConstitutionSave"
        android:layout_marginEnd="8dp" />
    <TextView
        android:text="@string/label_stat_constitution"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:id="@+id/textViewConstitutionLabel"
        android:background="@color/material_grey_400"
        app:layout_constraintTop_toBottomOf="@+id/textViewDexterityLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewConstitutionBonus"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewConstitutionScore"
        android:layout_marginStart="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceScore"
        app:layout_constraintTop_toBottomOf="@+id/textViewConstitutionScore"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceSave"
        app:layout_constraintTop_toBottomOf="@+id/textViewConstitutionSave"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceBonus"
        app:layout_constraintTop_toBottomOf="@+id/textViewConstitutionBonus"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewIntelligenceSave"
        android:layout_marginEnd="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_intelligence"
        android:id="@+id/textViewIntelligenceLabel"
        android:background="@color/material_grey_500"
        app:layout_constraintTop_toBottomOf="@+id/textViewConstitutionLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewIntelligenceBonus"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewIntelligenceScore"
        android:layout_marginStart="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomScore"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntelligenceScore"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomSave"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntelligenceSave"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomBonus"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntelligenceBonus"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewWisdomSave"
        android:layout_marginEnd="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_wisdom"
        android:id="@+id/textViewWisdomLabel"
        android:background="@color/material_grey_400"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntelligenceLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewWisdomBonus"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewWisdomScore"
        android:layout_marginStart="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaScore"
        app:layout_constraintTop_toBottomOf="@+id/textViewWisdomScore"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaSave"
        app:layout_constraintTop_toBottomOf="@+id/textViewWisdomSave"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaBonus"
        app:layout_constraintTop_toBottomOf="@+id/textViewWisdomBonus"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewCharismaSave"
        android:layout_marginEnd="8dp" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_charisma"
        android:id="@+id/textViewCharismaLabel"
        android:background="@color/material_grey_500"
        app:layout_constraintTop_toBottomOf="@+id/textViewWisdomLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewCharismaScore"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/textViewCharismaBonus"
        android:layout_marginEnd="8dp" />

    <!-- End Stats Block -->
</android.support.constraint.ConstraintLayout>
